# mic24045_zephyr_driver-main

./: CMakeLists.txt  Kconfig
drivers/: CMakeLists.txt  Kconfig
drivers/regulator/: CMakeLists.txt  Kconfig
drivers/regulator/mic24045/: CMakeLists.txt  Kconfig  mic24045.c  mic24045.h
dts/bindings/: microchop,mic24045.yaml
regulator/: Kconfig
regulator/mic24045/: CMakeLists.txt  mic24045.c
zephyr/: module.yml
